<resources>

    <!-- Main Activity -->
    <string name="app_name">save-your-train</string>

    <string name="title_exercises">Exercices</string>
    <string name="title_history">Historique</string>
    <string name="title_profile">Profil</string>
    <string name="title_activity_maps">Carte</string>

    <!-- Sign In / Sign Up Activity -->
    <string name="title_sign_in">Je me connecte</string>
    <string name="title_sign_up">Je m\'inscris</string>

    <string name="link_sign_up"><u>Pas encore de compte ? Cliquez ici !</u></string>
    <string name="link_sign_in"><u>Déjà un compte ? Cliquez ici !</u></string>

    <string name="email_field">email@example.com</string>
    <string name="password_field">Mot de passe</string>
    <string name="confirmation_password_field">Confirmer le mot de passe</string>
    <string name="first_name_field">Prénom</string>
    <string name="last_name_field">Nom</string>

    <string name="sign_in_button">Se connecter</string>
    <string name="sign_up_button">S\'inscrire</string>

    <!-- Add Exercise Activity -->
    <string name="title_activity_add_exercise">Ajouter un exercice</string>

    <string name="add_your_exercise">Ajoutez un exercice</string>
    <string name="exercise_name">Nom de l\'exercice</string>
    <string name="exercise_description">Description de l\'exercice</string>

    <!-- Active Exercise Activity -->
    <string name="title_activity_active_exercise">Lancer un exercice</string>

    <string name="description_text">Description :</string>

    <string name="execution_text">Execution</string>
    <string name="execution_field">60 sec (facultatif)</string>

    <string name="rest_text">Repos</string>
    <string name="rest_field">60 sec (facultatif)</string>

    <string name="repetition_text">Répétitions</string>
    <string name="repetition_field">10 (facultatif)</string>

    <string name="weight_text">Poids</string>
    <string name="weight_field">20 kg (facultatif)</string>

    <string name="series_text">Séries</string>
    <string name="series_field">4 (facultatif)</string>

    <!-- Launched Exercise Activity -->
    <string name="launch_exercise_button">Lancer l\'exercice</string>
    <string name="title_activity_launched_exercise">Entrainement</string>
    <string name="weight_label">kg</string>
    <string name="series_label">séries restantes</string>
    <string name="execution_label">Temps d\'exécution</string>
    <string name="rest_label">Temps de repos</string>
    <string name="repetitions">répétitions</string>

    <!-- Profile Fragment -->
    <string name="email">Email</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="sign_out_button">Se déconnecter</string>
    <string name="go_to_map_button">Voir les salles</string>

    <!-- Maps Activity -->
    <string name="location_permission_denied">Permission de localisation refusée</string>
    <string name="permission_required_toast">Permission requise</string>
    <string name="permission_rationale_location">" L'accès au service de localisation est nécessaire pour utiliser la fonctionnalité 'ma localisation', qui affiche votre position actuelle sur la carte."</string>

</resources>