<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.signUp.SignUpActivity" >

    <TextView
        android:id="@+id/linkSignIn"
        android:text="@string/link_sign_in"
        android:textColor="#87CEEB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signUpForm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TableLayout
        android:id="@+id/signUpForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/firstNameSignUp"
            android:inputType="text"
            android:hint="@string/first_name_field"
            android:padding="10dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/lastNameSignUp"
            android:inputType="text"
            android:hint="@string/last_name_field"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/emailSignUp"
            android:inputType="text"
            android:hint="@string/email_field"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/passwordSignUp1"
            android:inputType="text"
            android:hint="@string/password_field"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/passwordSignUp2"
            android:inputType="text"
            android:hint="@string/confirmation_password_field"
            android:padding="10dp" />

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signUpButton"
        android:text="@string/sign_up_button"
        app:layout_constraintTop_toBottomOf="@id/signUpForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/signUpError"
        android:hint=""
        android:padding="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#FF0000"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>