<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.exercises.addExercises.AddExerciseActivity">

        <TableLayout
            android:id="@+id/addExerciseForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/exerciseNameField"
                            android:singleLine="true"
                            android:maxLength="30"
                            android:inputType="text"
                            android:hint="@string/exercise_name"
                            android:autofillHints=""
                            android:padding="10dp"/>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:id="@+id/exerciseDescriptionField"
                            android:maxLength="100"
                            android:inputType="text"
                            android:hint="@string/exercise_description"
                            android:autofillHints=""
                            android:padding="10dp"/>
                </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseAddButton"
            android:text="@string/add_your_exercise"
            app:layout_constraintTop_toBottomOf="@id/addExerciseForm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>